cmake_minimum_required(VERSION 3.18.1)
project(orbslam3)
add_subdirectory(Thirdparty/DBoW2)
add_subdirectory(Thirdparty/g2o)
include_directories(include include/CameraModels)
include_directories(.)
include_directories(Thirdparty)
include_directories(Thirdparty/eigen3)
file(GLOB SRC_LIST "src/*.cc" "src/*.cpp" "src/CameraModels/*.cpp")
add_library(${PROJECT_NAME} SHARED ${SRC_LIST})
target_link_libraries(${PROJECT_NAME} ${OpenCV_LIBS} log)

find_package(OpenCV REQUIRED)
include_directories(${OpenCV_INCLUDE_DIRS})